--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "mpdf/mpdf": "^8.1",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
